@@ -1,3 +1,8 @@
+2013-01-27  Patrice Dumas  <pertusus@free.fr>
+
+	* tp/texi2any.pl, tp/Texinfo/Common.pm, tp/DebugTexinfo/DebugTree.pm,
+	util/detexinfo: remove output specific customization variables.
+
 2013-01-25  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.txi (Other Customization Variables)
